@@ -1,3 +1,8 @@
+2008-03-07  Don Porter  <dgp@users.sourceforge.net>
+
+	* tests/execute.test (execute-6.8):	Added tests checking that
+	bytecode is invalidates in the right situations.
+
 2008-03-03  Reinhard Max  <max@suse.de>
 
 	* unix/tclUnixChan.c: Fix mark and space parity on Linux, which
